--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "debounce": "^2.0.0",
     "html-react-parser": "^5.1.10",
     "input-otp": "^1.2.4",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.376.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
