--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@headlessui/react": "^1.7.19",
     "@headlessui/tailwindcss": "^0.2.0",
     "@heroicons/react": "^2.1.3",
-    "@prisma/client": "^5.13.0",
+    "@hookform/resolvers": "^3.9.1",
+    "@prisma/client": "^6.1.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -59,7 +60,6 @@
     "next-themes": "^0.3.0",
     "novel": "^0.1.22",
     "nuka-carousel": "^7.0.0",
-    "prisma": "^5.13.0",
     "react": "^18",
     "react-code-blocks": "^0.1.6",
     "react-day-picker": "^8.10.1",
@@ -86,7 +86,7 @@
     "uuid": "^10.0.0",
     "vaul": "^0.9.1",
     "xlsx": "^0.18.5",
-    "zod": "^3.23.6"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
@@ -100,6 +100,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "prisma": "^6.1.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "wait-on": "^8.0.1"
