--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
-    "remove-counter": "ts-node scripts/removeCounter.ts"
+    "remove-counter": "ts-node scripts/removeCounter.ts",
+    "analyze": "cross-env ANALYZE=true next build",
+    "build:analyze": "npm run build && npx @next/bundle-analyzer",
+    "perf": "node scripts/performance-monitor.js",
+    "build:perf": "npm run build && npm run perf"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.1.0",
@@ -81,7 +85,7 @@
     "react-share-social": "^0.1.60",
     "react-tailwindcss-select": "^1.8.5",
     "react-to-print": "^2.15.1",
-    "recharts": "^2.12.7",
+    "recharts": "^2.15.3",
     "resend": "^3.2.0",
     "stripe": "^16.1.0",
     "tailwind-merge": "^2.6.0",
@@ -100,6 +104,7 @@
     "@types/react-dom": "^18",
     "@types/react-image-gallery": "^1.2.4",
     "concurrently": "^9.0.1",
+    "cross-env": "^7.0.3",
     "electron": "^33.0.2",
     "electron-builder": "^25.1.8",
     "eslint": "^8",
@@ -108,6 +113,7 @@
     "prisma": "^6.4.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
-    "wait-on": "^8.0.1"
+    "wait-on": "^8.0.1",
+    "webpack-bundle-analyzer": "^4.10.1"
   }
 }
