--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "@types/bcrypt": "^5.0.2",
     "@types/uuid": "^10.0.0",
     "@uploadthing/react": "^6.5.1",
+    "@zxing/browser": "^0.1.5",
+    "@zxing/library": "^0.21.3",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
