--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@react-pdf/renderer": "^4.3.0",
     "@reduxjs/toolkit": "^2.2.5",
     "@remixicon/react": "^4.2.0",
+    "@tanstack/react-query": "^5.80.6",
+    "@tanstack/react-query-devtools": "^5.80.6",
     "@tanstack/react-table": "^8.16.0",
     "@tremor/react": "^3.16.1",
     "@types/bcrypt": "^5.0.2",
@@ -90,6 +92,7 @@
     "react-to-print": "^2.15.1",
     "recharts": "^2.15.3",
     "resend": "^3.2.0",
+    "sonner": "^2.0.5",
     "stripe": "^16.1.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
