--- a/package.json
+++ b/package.json
@@ -68,8 +68,8 @@
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.376.0",
-    "next": "14.2.3",
-    "next-auth": "^4.24.7",
+    "next": "^15.4.5",
+    "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.3.0",
     "novel": "^0.1.22",
     "nuka-carousel": "^7.0.0",
@@ -87,6 +87,7 @@
     "react-multi-carousel": "^2.8.5",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
+    "react-select": "^5.10.2",
     "react-share-social": "^0.1.60",
     "react-tailwindcss-select": "^1.8.5",
     "react-to-print": "^2.15.1",
