--- a/package.json
+++ b/package.json
@@ -72,12 +72,11 @@
     "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.3.0",
     "novel": "^0.1.22",
-    "nuka-carousel": "^7.0.0",
-    "react": "^18",
+    "react": "^19.1.1",
     "react-barcode": "^1.5.3",
     "react-code-blocks": "^0.1.6",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18",
+    "react-dom": "^19.1.1",
     "react-email": "2.1.4",
     "react-hook-form": "^7.51.3",
     "react-hot-toast": "^2.4.1",
@@ -95,6 +94,7 @@
     "resend": "^3.2.0",
     "sonner": "^2.0.5",
     "stripe": "^16.1.0",
+    "swiper": "^11.2.10",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
@@ -107,8 +107,8 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
     "@types/react-image-gallery": "^1.2.4",
     "concurrently": "^9.0.1",
     "cross-env": "^7.0.3",
