--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toggle": "^1.0.3",
@@ -51,6 +51,7 @@
     "@tanstack/react-table": "^8.16.0",
     "@tremor/react": "^3.16.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/uuid": "^10.0.0",
     "@uploadthing/react": "^6.5.1",
     "@zxing/browser": "^0.1.5",
@@ -62,19 +63,20 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
     "debounce": "^2.0.0",
+    "embla-carousel-react": "^8.6.0",
     "html-react-parser": "^5.1.10",
     "idb": "^8.0.2",
     "input-otp": "^1.2.4",
-    "jspdf": "^2.5.2",
+    "jspdf": "^3.0.1",
     "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.376.0",
     "next": "^15.4.5",
     "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.3.0",
     "novel": "^0.1.22",
+    "prismjs": "^1.30.0",
     "react": "^19.1.1",
     "react-barcode": "^1.5.3",
-    "react-code-blocks": "^0.1.6",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.1.1",
     "react-email": "2.1.4",
@@ -83,11 +85,11 @@
     "react-icons": "^5.2.1",
     "react-image-gallery": "^1.3.0",
     "react-jsbarcode": "^1.0.1",
-    "react-multi-carousel": "^2.8.5",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-select": "^5.10.2",
     "react-share-social": "^0.1.60",
+    "react-syntax-highlighter": "^15.6.1",
     "react-tailwindcss-select": "^1.8.5",
     "react-to-print": "^2.15.1",
     "recharts": "^2.15.3",
@@ -101,7 +103,7 @@
     "uploadthing": "^6.10.1",
     "uuid": "^10.0.0",
     "vaul": "^0.9.1",
-    "xlsx": "^0.18.5",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
     "zod": "^3.24.1"
   },
   "devDependencies": {
