--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "debounce": "^2.0.0",
     "embla-carousel-react": "^8.6.0",
     "html-react-parser": "^5.1.10",
+    "html2canvas": "^1.4.1",
     "idb": "^8.0.2",
     "input-otp": "^1.2.4",
     "jspdf": "^3.0.1",
