--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "embla-carousel-react": "^8.6.0",
     "html-react-parser": "^5.1.10",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
     "idb": "^8.0.2",
     "input-otp": "^1.2.4",
     "jspdf": "^3.0.1",
