--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,15 +11,15 @@ services:
       MONGO_INITDB_DATABASE: ${MONGO_DATABASE:-africapharmacy}
     volumes:
       - mongodb_data:/data/db
+      - ./mongodb-keyfile:/etc/mongo/mongodb-keyfile
     networks:
       - africapharmacy-network
-    command: mongod --replSet rs0 --bind_ip_all
+    command: mongod --replSet rs0 --bind_ip_all --keyFile /etc/mongo/mongodb-keyfile --auth
     healthcheck:
-      test: echo 'db.runCommand("ping").ok' | mongosh localhost:27017/test --quiet
+      test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
       interval: 10s
-      timeout: 10s
+      timeout: 5s
       retries: 5
-      start_period: 40s
 
   app:
     build:
@@ -29,6 +29,8 @@ services:
     restart: unless-stopped
     ports:
       - "3000:3000"
+    env_file:
+      - ./.env.docker
     environment:
       # Database - Updated for replica set
       DATABASE_URL: mongodb://${MONGO_ROOT_USERNAME:-admin}:${MONGO_ROOT_PASSWORD:-password123}@mongodb:27017/${MONGO_DATABASE:-africapharmacy}?authSource=admin&replicaSet=rs0
@@ -52,7 +54,10 @@ services:
       # Use local storage for file uploads
       NEXT_PUBLIC_USE_LOCAL_STORAGE: "true"
     depends_on:
-      - mongodb
+      mongodb:
+        condition: service_healthy
+      mongo-init:
+        condition: service_completed_successfully
     volumes:
       - ./public/uploads:/app/public/uploads
     networks:
@@ -63,24 +68,40 @@ services:
     image: mongo:7.0
     container_name: africapharmacy-mongo-init
     depends_on:
-      - mongodb
+      mongodb:
+        condition: service_healthy
     networks:
       - africapharmacy-network
     restart: "no"
-    command: >
-      mongosh --host mongodb:27017 -u admin -p password123 --authenticationDatabase admin --eval '
-        var status = rs.status();
-        if (status.ok !== 1) {
-          rs.initiate({
-            _id: "rs0",
-            members: [
-              { _id: 0, host: "mongodb:27017", priority: 1 }
-            ]
-          });
-        } else {
-          print("Replica set already initialized");
-        }
-      '
+    volumes:
+      - ./init-mongo.js:/init-mongo.js
+    command:
+      - sh
+      - -c
+      - |
+        echo "Waiting for MongoDB to be healthy..."
+        until mongosh --host mongodb:27017 --eval 'quit(db.runCommand({ ping: 1 }).ok ? 0 : 1)'
+        do
+          echo "..."
+          sleep 2
+        done
+
+        echo "Checking if replica set is already initialized..."
+        if mongosh --host mongodb:27017 -u admin -p password123 --authenticationDatabase admin --eval 'rs.status().ok' | grep -q "1"; then
+          echo "Replica set already initialized. Skipping rs.initiate()."
+        else
+          echo "MongoDB healthy. Initializing replica set..."
+          mongosh --host mongodb:27017 -u admin -p password123 --authenticationDatabase admin --eval '
+          rs.initiate(
+            {
+              _id: "rs0",
+              members: [
+                { _id: 0, host: "mongodb:27017" }
+              ]
+            }
+          )
+          '
+        fi
 
   # Optional: MongoDB Express for database management UI
   mongo-express:
@@ -95,7 +116,8 @@ services:
       ME_CONFIG_MONGODB_URL: mongodb://${MONGO_ROOT_USERNAME:-admin}:${MONGO_ROOT_PASSWORD:-password123}@mongodb:27017/?replicaSet=rs0
       ME_CONFIG_BASICAUTH: false
     depends_on:
-      - mongodb
+      mongodb:
+        condition: service_healthy
     networks:
       - africapharmacy-network
 
